--- a/Phone/Components/AddUser.razor
+++ b/Phone/Components/AddUser.razor
@@ -58,8 +58,8 @@
         }
         else
         {
-            // Save user to list or database
-            newUser = new User(); // Clear form
+           
+            newUser = new User(); 
             errorMessage = "";
         }
     }
